Index technical metadata